--- a/ShahWilayat/Views/AssociateMember/Index.cshtml
+++ b/ShahWilayat/Views/AssociateMember/Index.cshtml
@@ -43,11 +43,11 @@
                     <table class="table table-bordered mb-0 tblMember">
                         <thead>
                             <tr>
-                                <th style="text-align:center">Sr No.</th>
-                                <th>Membership No</th>
+                                <th style="text-align:center">Sr #</th>
+                                <th>Membership #</th>
                                 <th>Date</th>
                                 <th>Name</th>
-                                <th>Cell No</th>
+                                <th>Cell #</th>
                                 <th>Status</th>
                                 <th class="align-middle">Action</th>
                                 <th class="align-middle">Attachments</th>
@@ -135,27 +135,27 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtCellNo">Cell No</label>
+                                <label for="txtCellNo">Cell #</label>
                                 <input type="text" id="txtCellNo" class="form-control txtCellNo numbericOnly" placeholder="Enter cell number">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtWhatsApp">WhatsApp No</label>
+                                <label for="txtWhatsApp">WhatsApp #</label>
                                 <input type="text" id="txtWhatsApp" class="form-control txtWhatsApp numericOnly notrequired" placeholder="Enter whatsapp number">
                             </div>
                         </div>
 
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtLandline">Landline</label>
+                                <label for="txtLandline">Landline #</label>
                                 <input type="text" id="txtLandline" class="form-control txtLandline numericOnly notrequired" placeholder="Enter landline number">
                             </div>
                         </div>
 
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtOfficePhone">Office Phone</label>
+                                <label for="txtOfficePhone">Office Phone #</label>
                                 <input type="text" id="txtOfficePhone" class="form-control txtOfficePhone numericOnly notrequired" placeholder="Enter OfficePhone number">
                             </div>
                         </div>
@@ -226,14 +226,14 @@
                         </div>
 
                     </div>
-                    <h4 class="form-section"><i class="ft-paperclip"></i> Attachments</h4>
+                    <h4 class="form-section"><i class="ft-paperclip"></i>Attachments - (Pls select from the following)</h4>
                     <hr>
                     <div class="row">
                         <div class="col-md-4">
                             <div class="fileinput fileinput-new" data-provides="fileinput">
 
                                 <span class="btn btn-block btn-outline btn-info btn-file">
-                                    <span class="fileinput-new">Attach CNIC Front</span>
+                                    <span class="fileinput-new">CNIC Front</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
                                     <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtCnicFrontFile" accept="image/*" />
                                 </span>
@@ -245,7 +245,7 @@
                             <div class="fileinput fileinput-new" data-provides="fileinput">
 
                                 <span class="btn btn-block btn-outline btn-info btn-file">
-                                    <span class="fileinput-new">Attach CNIC Back</span>
+                                    <span class="fileinput-new">CNIC Back</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
                                     <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtCnicBackFile" accept="image/*" />
                                 </span>
@@ -257,7 +257,7 @@
                             <div class="fileinput fileinput-new" data-provides="fileinput">
 
                                 <span class="btn btn-block btn-outline btn-info btn-file">
-                                    <span class="fileinput-new">Attach Recent Profile Picture</span>
+                                    <span class="fileinput-new">Recent Profile Picture</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
                                     <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtProfileFile" accept="image/*" />
                                 </span>
@@ -352,27 +352,27 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtCellNo_upd">Cell No</label>
+                                <label for="txtCellNo_upd">Cell #</label>
                                 <input type="text" id="txtCellNo_upd" class="form-control txtCellNo_upd numbericOnly" placeholder="Enter cell number">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtWhatsApp_upd">WhatsApp No</label>
+                                <label for="txtWhatsApp_upd">WhatsApp #</label>
                                 <input type="text" id="txtWhatsApp_upd" class="form-control txtWhatsApp_upd numericOnly notrequired" placeholder="Enter whatsapp number">
                             </div>
                         </div>
 
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtLandline_upd">Landline</label>
+                                <label for="txtLandline_upd">Landline #</label>
                                 <input type="text" id="txtLandline_upd" class="form-control txtLandline_upd numericOnly notrequired" placeholder="Enter landline number">
                             </div>
                         </div>
 
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtOfficePhone_upd">Office Phone</label>
+                                <label for="txtOfficePhone_upd">Office Phone #</label>
                                 <input type="text" id="txtOfficePhone_upd" class="form-control txtOfficePhone_upd numericOnly notrequired" placeholder="Enter OfficePhone number">
                             </div>
                         </div>
@@ -475,7 +475,7 @@
                             <div class="fileinput fileinput-new" data-provides="fileinput">
 
                                 <span class="btn btn-block btn-outline btn-info btn-file">
-                                    <span class="fileinput-new">Attach CNIC Front</span>
+                                    <span class="fileinput-new">CNIC Front</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
                                     <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtCnicFrontFile_upd notrequired" accept="image/*" />
                                 </span>
@@ -487,7 +487,7 @@
                             <div class="fileinput fileinput-new" data-provides="fileinput">
 
                                 <span class="btn btn-block btn-outline btn-info btn-file">
-                                    <span class="fileinput-new">Attach CNIC Back</span>
+                                    <span class="fileinput-new">CNIC Back</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
                                     <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtCnicBackFile_upd notrequired" accept="image/*" />
                                 </span>
@@ -498,7 +498,7 @@
                         <div class="col-md-4">
                             <div class="fileinput fileinput-new" data-provides="fileinput">
                                 <span class="btn btn-block btn-outline btn-info btn-file">
-                                    <span class="fileinput-new">Attach Recent Profile Picture</span>
+                                    <span class="fileinput-new"></span>Recent Profile Picture</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
                                     <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtProfileFile_upd notrequired" accept="image/*" />
                                 </span>
