--- a/ShahWilayat/Views/Member/Index.cshtml
+++ b/ShahWilayat/Views/Member/Index.cshtml
@@ -42,11 +42,11 @@
                     <table class="table table-bordered mb-0 tblMember">
                         <thead>
                             <tr>
-                                <th style="text-align:center">Sr No.</th>
-                                <th>Membership No</th>
+                                <th style="text-align:center">Sr #</th>
+                                <th>Membership #</th>
                                 <th>Date</th>
                                 <th>Name</th>
-                                <th>Cell No</th>
+                                <th>Cell #</th>
                                 <th>Status</th>
                                 <th class="align-middle">Action</th>
                                 <th class="align-middle">Attachments</th>
@@ -104,7 +104,7 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtFatherName">Father/ Husband Name</label>
+                                <label for="txtFatherName">Father/Husband Name</label>
                                 <input type="text" id="txtFatherName" class="form-control txtFatherName" placeholder="Enter father name">
                             </div>
                         </div>
@@ -128,27 +128,27 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtCellNo">Cell No</label>
+                                <label for="txtCellNo">Cell #</label>
                                 <input type="text" id="txtCellNo" class="form-control txtCellNo numbericOnly" placeholder="Enter cell number">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtWhatsApp">WhatsApp No</label>
+                                <label for="txtWhatsApp">WhatsApp #</label>
                                 <input type="text" id="txtWhatsApp" class="form-control txtWhatsApp numericOnly notrequired" placeholder="Enter whatsapp number">
                             </div>
                         </div>
 
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtLandline">Landline</label>
+                                <label for="txtLandline">Landline #</label>
                                 <input type="text" id="txtLandline" class="form-control txtLandline numericOnly notrequired" placeholder="Enter landline number">
                             </div>
                         </div>
 
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtOfficePhone">Office Phone</label>
+                                <label for="txtOfficePhone">Office Phone #</label>
                                 <input type="text" id="txtOfficePhone" class="form-control txtOfficePhone numericOnly notrequired" placeholder="Enter OfficePhone number">
                             </div>
                         </div>
@@ -219,7 +219,7 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtMembershipNo">Membership No</label>
+                                <label for="txtMembershipNo">Membership #</label>
                                 <input type="text" id="txtMembershipNo" class="form-control txtMembershipNo" placeholder="Enter membership no">
                             </div>
                         </div>
@@ -231,31 +231,31 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtReferenceNo">Reference No</label>
+                                <label for="txtReferenceNo">Reference #</label>
                                 <input type="text" id="txtReferenceNo" class="form-control txtReferenceNo" placeholder="Enter reference number">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtFolioNo">Folio No</label>
+                                <label for="txtFolioNo">Folio #</label>
                                 <input type="text" id="txtFolioNo" class="form-control txtFolioNo" placeholder="Enter folio number">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="ddlManagementCommittee">Created By</label>
+                                <label for="ddlManagementCommittee">Created by</label>
                                 <select class="form-control ddlManagementCommittee"></select>
                             </div>
                         </div>
                     </div>
-                    <h4 class="form-section"><i class="ft-paperclip"></i> Attachments</h4>
+                    <h4 class="form-section"><i class="ft-paperclip"></i>Attachments - (Pls select from the following)</h4>
                     <hr>
                     <div class="row">
                         <div class="col-md-4">
                             <div class="fileinput fileinput-new" data-provides="fileinput">
 
                                 <span class="btn btn-block btn-outline btn-info btn-file">
-                                    <span class="fileinput-new">Attach CNIC Front</span>
+                                    <span class="fileinput-new">CNIC Front</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
                                     <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtCnicFrontFile" accept="image/*" />
                                 </span>
@@ -267,7 +267,7 @@
                             <div class="fileinput fileinput-new" data-provides="fileinput">
 
                                 <span class="btn btn-block btn-outline btn-info btn-file">
-                                    <span class="fileinput-new">Attach CNIC Back</span>
+                                    <span class="fileinput-new">CNIC Back</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
                                     <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtCnicBackFile" accept="image/*" />
                                 </span>
@@ -279,7 +279,7 @@
                             <div class="fileinput fileinput-new" data-provides="fileinput">
 
                                 <span class="btn btn-block btn-outline btn-info btn-file">
-                                    <span class="fileinput-new">Attach Recent Profile Picture</span>
+                                    <span class="fileinput-new">Recent Profile Picture</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
                                     <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtProfileFile" accept="image/*" />
                                 </span>
@@ -326,7 +326,7 @@
 
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtFirstName_upd">Father/ Husband Name</label>
+                                <label for="txtFirstName_upd">First Name</label>
                                 <input type="text" id="txtFirstName_upd" class="form-control txtFirstName_upd" placeholder="Enter first name">
                             </div>
                         </div>
@@ -344,7 +344,7 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtFatherName_upd">Father Name</label>
+                                <label for="txtFatherName_upd">Father/Husband Name</label>
                                 <input type="text" id="txtFatherName_upd" class="form-control txtFatherName_upd" placeholder="Enter father name">
                             </div>
                         </div>
@@ -368,27 +368,27 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtCellNo_upd">Cell No</label>
+                                <label for="txtCellNo_upd">Cell #</label>
                                 <input type="text" id="txtCellNo_upd" class="form-control txtCellNo_upd numbericOnly notrequired" placeholder="Enter cell number">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtWhatsApp_upd">WhatsApp No</label>
+                                <label for="txtWhatsApp_upd">WhatsApp #</label>
                                 <input type="text" id="txtWhatsApp_upd" class="form-control txtWhatsApp_upd numericOnly notrequired" placeholder="Enter whatsapp number">
                             </div>
                         </div>
 
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtLandline_upd">Landline</label>
+                                <label for="txtLandline_upd">Landline #</label>
                                 <input type="text" id="txtLandline_upd" class="form-control txtLandline_upd numericOnly notrequired" placeholder="Enter landline number">
                             </div>
                         </div>
 
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtOfficePhone_upd">Office Phone</label>
+                                <label for="txtOfficePhone_upd">Office Phone #</label>
                                 <input type="text" id="txtOfficePhone_upd" class="form-control txtOfficePhone_upd numericOnly notrequired" placeholder="Enter OfficePhone number">
                             </div>
                         </div>
@@ -459,7 +459,7 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtMembershipNo_upd">Membership No</label>
+                                <label for="txtMembershipNo_upd">Membership #</label>
                                 <input type="text" id="txtMembershipNo_upd" class="form-control txtMembershipNo_upd" placeholder="Enter membership no">
                             </div>
                         </div>
@@ -471,19 +471,19 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtReferenceNo_upd">Reference No</label>
+                                <label for="txtReferenceNo_upd">Reference #</label>
                                 <input type="text" id="txtReferenceNo_upd" class="form-control txtReferenceNo_upd" placeholder="Enter reference number">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtFolioNo_upd">Folio No</label>
+                                <label for="txtFolioNo_upd">Folio #</label>
                                 <input type="text" id="txtFolioNo_upd" class="form-control txtFolioNo_upd" placeholder="Enter folio number">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="ddlManagementCommittee_upd">Created By</label>
+                                <label for="ddlManagementCommittee_upd">Created by</label>
                                 <select class="form-control ddlManagementCommittee_upd"></select>
                             </div>
                         </div>
@@ -520,7 +520,7 @@
                             <div class="fileinput fileinput-new" data-provides="fileinput">
 
                                 <span class="btn btn-block btn-outline btn-info btn-file">
-                                    <span class="fileinput-new">Attach CNIC Front</span>
+                                    <span class="fileinput-new">CNIC Front</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
                                     <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtCnicFrontFile_upd notrequired" accept="image/*" />
                                 </span>
@@ -532,7 +532,7 @@
                             <div class="fileinput fileinput-new" data-provides="fileinput">
 
                                 <span class="btn btn-block btn-outline btn-info btn-file">
-                                    <span class="fileinput-new">Attach CNIC Back</span>
+                                    <span class="fileinput-new">CNIC Back</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
                                     <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtCnicBackFile_upd notrequired" accept="image/*" />
                                 </span>
@@ -544,7 +544,7 @@
                             <div class="fileinput fileinput-new" data-provides="fileinput">
 
                                 <span class="btn btn-block btn-outline btn-info btn-file">
-                                    <span class="fileinput-new">Attach Recent Profile Picture</span>
+                                    <span class="fileinput-new">Recent Profile Picture</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
                                     <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtProfileFile_upd notrequired" accept="image/*" />
                                 </span>
