--- a/ShahWilayat/Views/Tenure/Index.cshtml
+++ b/ShahWilayat/Views/Tenure/Index.cshtml
@@ -42,7 +42,7 @@
                     <table class="table table-bordered mb-0 tblTenure">
                         <thead>
                             <tr>
-                                <th nowrap>Sr No.</th>
+                                <th nowrap>Sr #</th>
                                 <th>Payment Category</th>
                                 <th>Tenure</th>
                                 <th>Start Year</th>
