--- a/ShahWilayat/Views/Payment/Index.cshtml
+++ b/ShahWilayat/Views/Payment/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="content-wrapper">
     <div class="content-header row">
         <div class="content-header-left col-md-6 col-12 mb-2">
-            <h3 class="content-header-title">Payment</h3>
+            <h3 class="content-header-title">Payment - Predefined</h3>
         </div>
     </div>
     <div class="content-body">
@@ -25,13 +25,13 @@
                                 <select class="form-control ddlAllotmentType">
                                     <option value="0">--Select--</option>
                                     <option value="1">Original Allotment</option>
-                                    <option value="2">Doubling Allotment</option>
+                                    <option value="2">Administrator Allotment</option>
                                 </select>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="ddlMember">Member</label>
+                                <label for="ddlMember">Member (Name/Membership #/Plot #)</label>
                                 <select class="form-control ddlMember select2" style="width:100%"></select>
                             </div>
                         </div>
@@ -43,7 +43,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="ddlPlot">Plot</label>
+                                <label for="ddlPlot">Plot (No./Membership #)</label>
                                 <select class="form-control ddlPlot select2" style="width:100%"></select>
                             </div>
                         </div>
@@ -73,13 +73,13 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="txtReceiptNo">Receipt No</label>
+                                <label for="txtReceiptNo">Receipt #</label>
                                 <input type="text" class="form-control txtReceiptNo" placeholder="Enter receipt no" />
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="txtChequeNo">Cheque No</label>
+                                <label for="txtChequeNo">Cheque #</label>
                                 <input type="text" class="form-control txtChequeNo notrequired" disabled="" placeholder="Enter cheque no" />
                             </div>
                         </div>
@@ -97,7 +97,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="ddlManagementCommittee">Created By</label>
+                                <label for="ddlManagementCommittee">Created by</label>
                                 <select class="form-control ddlManagementCommittee"></select>
                             </div>
                         </div>
