--- a/ShahWilayat/Views/Shared/_HeaderNavBar.cshtml
+++ b/ShahWilayat/Views/Shared/_HeaderNavBar.cshtml
@@ -5,7 +5,7 @@
             <ul class="nav navbar-nav flex-row">
                 <li class="nav-item mobile-menu d-md-none mr-auto"><a class="nav-link nav-menu-main menu-toggle hidden-xs" href="#"><i class="ft-menu font-large-1"></i></a></li>
                 <li class="nav-item">
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="Dashboard">
                         <img class="brand-logo" alt="modern admin logo" src="~/Content/app-assets/images/logo/swchs-80.png">
                         <h3 class="brand-text">Shah Wilayat</h3>
                     </a>
